# tensorflow-devices

./: .gitignore  README.md  devices.py  pyproject.toml  train.py  utils.py
