[tool.poetry]
name = "tensorflow-devices"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tensorflow_devices"}]

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.2"
tensorflow-macos = "2.16.2"
tensorflow-metal = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
